# CuriosityGraphicsBase

./: .gitignore  CMakeLists.txt  build_env.sh
game/breakout/: CMakeLists.txt  build_env.sh  game.cpp  game.h  gamelevel.cpp  gamelevel.h  gameobject.h  main.cpp  spriterender.cpp  spriterender.h
game/breakout/levels/: one.lvl
game/breakout/shader/: particles.fs  particles.vs  post_processing.fs  post_processing.vs  sprite.fs
game/breakout/src/: CMakeLists.txt  ballobject.cpp  ballobject.h  game.cpp  game.h  gamelevel.cpp  gameobject.cpp  gameobject.h  main.cpp  particlegenerator.cpp  particlegenerator.h  postprocessor.cpp  postprocessor.h  spriterender.cpp  spriterender.h
include/sb7_include/: sb7.h
note/: Question.txt  codestyle.txt
shader/: cubeblock_fragment_shader  cubeblock_vertex_shader  fragment_shader  skybox_fragment_shader  skybox_vertex_shader  vertex_shader
shader/breakout/: sprite.fs  sprite.vs
shader/drawobject/: ballobject.fs  ballobject.vs  cubeobject.fs  cubeobject.vs
shader/font/: ttfont.fs  ttfont.vs
src/: CMakeLists.txt  drawableobject.cpp  drawableobject.h  fpscamera.cpp  fpscamera.h  graphicsglobal.cpp  graphicsglobal.h  lightsource.cpp  lightsource.h  mesh.cpp  mesh.h  model.cpp  model.h  observer.cpp  observer.h  program.cpp  program.h  resourcemanager.cpp  resourcemanager.h  scene.cpp  scene.h  shader.cpp  shader.h  texture2d.cpp  texture2d.h  transmat4.cpp  transmat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h  worldbaseobject.cpp  worldbaseobject.h
src/data_struct/: octree.cpp  octree.h
src/drawable_object/: ballobject.cpp  ballobject.h  cubeblock.cpp  cubeblock.cpp.autosave  cubeblock.h  cubeobject.cpp  cubeobject.h  gravity.h  imoveable.h  skybox.cpp
src/geometry/: line3.cpp  line3.h  line3segment.h  ray.cpp  sphere.cpp  sphere.h
src/graphics_math/: graphicsmath.h  line3.cpp  line3.h  line3segment.h  ray.h  sphere.cpp  sphere.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
src/math/: line3.cpp  line3.cpp.autosave  line3.h  line3segment.cpp  line3segment.h  point3.cpp  point3.h
src/phy_engine/: kdtree3.cpp  kdtree3.h
src/resource/: vao.cpp  vao.h
src/scene_managing/: kdtree.c  kdtree.h  scene.cpp  scene.h
src/scene_managing/scene_v1/: scenev1.cpp  scenev1.h  scenev1Tree.cpp  scenev1Tree.h  scenev1factory.cpp  scenev1factory.h  scenev1organizer.cpp  scenev1organizer.h
src/text_renderer/: font.cpp  font.h  fontmanager.cpp  fontmanager.h  textrenderer.cpp  textrenderer.h  tttextrenderer.cpp  tttextrenderer.h
src/world_object/: cubeline.cpp  cubeline.h  cubeobject.cpp  skybox.h  worldobject.h
test/: 01_test_model.cpp  02_test_cube_block.cpp  03_test_skybox.cpp  04_test_freetype.cpp  05_test_octree.cpp  CMakeLists.txt  main.cpp
